# jubilant-barnacle

./: README.md  algo.py  pyproject.toml  requirements.txt
backtesting/: __init__.py  backtest_engine.py  data_loader.py
backtesting/data/: sample.csv
backtesting/strategies/: __init__.py  decision_tree_strategy.py
ctrader/: AIAlgoBot.cs
mql5/Experts/: AIAlgoTrader.mq5
mql5/Include/: AIStrategy.mqh  OHLCVData.mqh
mql5/Properties/: settings.mqh
onnx_models/pretrained/: README.md
python_inference/: __init__.py  strategy_builder.py
python_inference/agents/: __init__.py  base_agent.py  gemini_agent.py  groq_agent.py  ollama_agent.py  orchestrator.py
python_inference/models/: __init__.py  onnx_model.py
tests/: conftest.py  test_agents.py  test_backtest_engine.py  test_data_loader.py  test_decision_tree_strategy.py  test_onnx_model.py  test_strategy_builder.py
